--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,125 @@
 theme: jekyll-theme-hacker
+nmap基本使用方法
+
+1、nmap简单扫描
+
+nmap默认发送一个ARP的PING数据包，来探测目标主机1-10000范围内所开放的所有端口
+
+命令语法： 
+nmap <target ip address>
+
+其中：target ip address是扫描的目标主机的ip地址
+
+例子:nmap 10.0.0.55
+
+效果如下： 
+
+
+2、nmap简单扫描，并对结果返回详细的描述输出
+
+命令语法：namp -vv <target ip address>
+
+介绍：-vv参数设置对结果的详细输出
+
+例子：nmap -vv 10.0.0.55
+
+效果如下： 
+
+
+3、nmap自定义扫描
+
+命令语法：nmap -p(range) <target IP>
+
+介绍：（range）为要扫描的端口范围，端口大小不能超过65535
+
+例子：扫描目标主机的1-50号端口
+
+nmap -p50-80 10.0.0.55
+
+效果： 
+
+
+4、nmap 指定端口扫描
+
+命令语法：nmap -p(port1,port2,…) <target IP>
+
+介绍：port1,port2…为想要扫描的端口号
+
+例子：扫描目标主机的80，443，801端口
+
+nmap -p80,443,801 10.0.0.55
+
+效果： 
+
+
+5、nmap ping 扫描
+
+nmap可以利用类似windows/linux系统下的ping 方式进行扫描
+
+命令语法： nmap -sP <target ip>
+
+例子：nmap sP 10.1.112.89
+
+效果： 
+
+
+6、nmap 路由跟踪
+
+路由器追踪功能，能够帮助网络管理员了解网络通行情况，同时也是网络管理人员很好的辅助工具，通过路由器追踪可以轻松的查处从我们电脑所在地到目的地之间所经常的网络节点，并可以看到通过各个结点所花费的时间
+
+命令语法： 
+nmap –traceroute <target IP>
+
+例子:namp –traceroute 8.8.8.8(geogle dns服务器ip)
+
+效果 
+
+
+7、nmap设置扫描一个网段下的ip
+
+命令语法： 
+nmap -sP <network address> </CIDR>
+
+介绍：CIDR为设置的子网掩码（/24,/16,/8等）
+
+例子：nmap -sP 10.1.1.0 /24
+
+效果： 
+
+
+8、nmap 操作系统类型的探测
+
+命令语法： 
+nmap -0 <target IP>
+
+例子：nmap -O(大写的o) 10.1.112.89
+
+效果： 
+
+
+9、nmap万能开关
+
+包含了1-10000端口ping扫描，操作系统扫描，脚本扫描，路由跟踪，服务探测
+
+命令语法： 
+nmap -A <target ip>
+
+例子：nmap -A 10.1.112.89
+
+效果： 
+
+
+10、nmap命令混合式扫描
+
+可以做到类似参数-A所完成的功能，但又能细化我们的需求要求
+
+命令语法： 
+nmap -vv -p1-100 -O <target ip>
+
+例子： 
+nmap -vv -p1-100 -O 10.1.112.89
+
+效果： 
+————————————————
+版权声明：本文为CSDN博主「code_AC」的原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/code_ac/article/details/74131967
